feat: Add my info to the body tag
add my info to the body tag
ex) my age, my favorite

--- a/index.html
+++ b/index.html
@@ -3,7 +3,18 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First HTML Page with git</title>
+    <title>Bomi</title>
   </head>
-  <body></body>
+  <body>
+    <div>
+       <h3>안녕하세요. 김보미입니다.</h3>
+       
+       <div>
+         <ul>
+           <li>나이</li>
+           <li>좋아하는 것</li>
+         </ul>
+       </div>
+    </div>
+  </body>
 </html>
