--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
          <ul>
            <li>나이</li>
            <li>좋아하는 것</li>
+           <li>저의 블로그 주소는 https://codechasseur.tistory.com/ 입니다.</li>
+           <li>7개월간 잘 부탁드려요</li>
+           <li>^^</li>
          </ul>
        </div>
     </div>
